[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sing-box-config-converter"
version = "1.1.0"
description = "Generate sing-box client configs from server configs, with QR code output"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "thinkpoet", email = "shibaohong@outlook.com" }]
keywords = ["sing-box", "proxy", "vpn", "hysteria2", "shadowsocks", "trojan"]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/hongshibao/sing-box-config-converter"

[project.optional-dependencies]
qr = ["qrcode[pil]>=7.4"]

[project.scripts]
sing-box-config-converter = "generate_client_config:main"

[dependency-groups]
dev = ["qrcode[pil]>=7.4"]

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["generate_client_config.py"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
build_command = "uv build"
commit_parser = "angular"
upload_to_pypi = false       # PyPI publish is handled by pypa/gh-action-pypi-publish
upload_to_release = true     # attach dist assets to the GitHub release
